fix: checkbox ripple alignment (#36)

--- a/src/preset/overrides.scss
+++ b/src/preset/overrides.scss
@@ -97,8 +97,8 @@
       .v-input--selection-controls__ripple {
         height: 20px;
         width: 20px;
-        left: -8px;
-        top: -5px;
+        left: -5px;
+        top: -7px;
       }
       .v-icon {
         font-size:  map-get($font-sizes, 18);
